Se arreglo el problema de pasar parametro de ciudades al DetailActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="txtBtnPActual">Pronostico Actual</string>
     <string name="txtBtnLCiudades">Listado de Ciudades</string>
     <string name="descripcionItemLista">Imagen de una estrella amarilla</string>
+    <string name="imagen_de_tilde">Imagen de tilde</string>
+    <string name="contentIcono">Icono de una estrella</string>
 </resources>
